--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -64,7 +64,8 @@
             </div>
         </div>
     </section>
-    <!-- Listings -->
+    <br>
+    <!-- Alerts -->
     {% include 'partials/_alerts.html' %}
     <!-- Listings -->
     <section id="listings" class="py-5">
